--- a/views/login.html
+++ b/views/login.html
@@ -1,12 +1,17 @@
 <html>
-<title>
-	yagra-login
-</title> 
+<head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<title>登录</title>
+	
+</head>
 <body>
+<div id="error">
+	<span style="color: red;">{error_message}</span>
+</div>
 <div id="login_form" class="login_form">
-	<form action="/cgi-bin/login.py" method="post" accept-charset="utf-8">
-		<label for="username">用户名： </label>
-		<input type="text" name="username" value="" id="username"><br />
+	<form action="/actions/login.py" method="post" accept-charset="utf-8">
+		<label for="email">邮箱： </label>
+		<input type="text" name="email" value="" id="email"><br />
 		<label for="password">密码：</label>
 		<input type="password" name="password" value="" id="password"><br />
 		<p><input type="submit" value="登录">	<input type="reset" name="reset" value="重置" ></p>
