--- a/views/regist.html
+++ b/views/regist.html
@@ -1,6 +1,8 @@
 <html>
-<meta charset="utf-8">
-<title>注册</title> 
+<head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<title>注册</title>
+</head>
 <body onload="">
 	<div id="error">
 		<span style="color: red;"><p>{error_message}</p></span>
