implement image access api and initial install function

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 			<img src="{image_path}" alt="默认头像" width="100px" height="100px">
 			<p>{email}</p>
 			<p><a href="/actions/changeimg.py">更换默认头像</a></p>
-			<p><a href="/avatar/000.img" >图像链接</a>
+			<p><a href="/actions/avatar.py?uid={email_digest}" >图像链接</a>
 		</div>
 	</div>
 </body>
