--- a/views/login.html
+++ b/views/login.html
@@ -1,14 +1,16 @@
 <html>
 <head>
-	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>登录</title>
-	
+<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+<title>登录</title>
 </head>
 <body>
+<div id="header">
+	<a href="/actions/regist.py">注册</a>
+</div>
 <div id="error">
 	<span style="color: red;">{error_message}</span>
 </div>
-<div id="login_form" class="login_form">
+<div id="login_form" class="form">
 	<form action="/actions/login.py" method="post" accept-charset="utf-8">
 		<label for="email">邮箱： </label>
 		<input type="text" name="email" value="" id="email"><br />
