--- a/views/changeimg.html
+++ b/views/changeimg.html
@@ -1,21 +1,31 @@
 <html>
 <head>
-	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>更换头像</title>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+<title>更换头像</title>
+<link rel="stylesheet" href="/css/core.css" type="text/css"  charset="utf-8">
 </head>
 <body >
-	<div id="top_bar" class="top_bar">
-		<a href="/actions/logout.py">登出</a>
+<div id="header">
+	<div id="logo">
+		<img width=70px; src="/images/logo.png">
+		<a href="/logout">登出</a>
 	</div>
-	<div id="content" class="content">
-		<div id="error" class="error">
-			<span style="color: red;">{error_message}</span>
-		</div>
-		<h1>更换默认头像</h1>
-		<form action="/actions/changeimg.py" method="post" enctype="multipart/form-data">
-			<label for="image">上传文件</label><input type="file" name="image" >
-			<p><input type="submit" value="提交"></p>
+</div>
+<div id="content">
+	<div id="error">
+		<span class="error"><strong>{error_message}</strong></span>
+	</div>
+	<div id="form">
+		<h1>从电脑中选择一个图片文件</h1>
+		<form action="/changeimg" method="post" enctype="multipart/form-data">
+			<label for="image">上传文件：</label>
+			<input type="file" name="image" class="field" style="border: none;"><br />
+			<input type="submit" value="提交" class="button">
+			<a href="/index">取消</a>
 		</form>
 	</div>
+</div>
+<div id="footer">
+</div>
 </body>
 </html>
