--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,26 @@
 <html>
-<title>首页</title> 
-<body >
-	<div id="top_bar" class="top_bar">
-		<a href="/actions/logout.py">登出</a>
+<head>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+<title>首页</title>
+<link rel="stylesheet" href="/css/core.css" type="text/css"  charset="utf-8">
+</head>
+<body>
+<div id="header">
+	<div id="logo">
+		<img width=70px; src="/images/logo.png">
+		<a href="/logout">登出</a>
 	</div>
-	<div id="content" class="content">
+</div>
+<div id="content">
+	<div id="info_box">
 		<h1>管理你的账户</h1>
-		<div id="info" class="info">
-			<img src="{image_path}" alt="默认头像" width="100px" height="100px">
-			<p>{email}</p>
-			<p><a href="/actions/changeimg.py">更换默认头像</a></p>
-			<p><a href="/actions/avatar.py?uid={email_digest}" >图像链接</a>
+		<div id="info" >
+			<img src="{image_path}" alt="默认头像">
+			<p class="address">{email}</p>
+			<p class="tip"><a href="/changeimg">更换默认头像</a> | 
+			<a href="/avatar/{email_digest}" >图像链接</a></p>
 		</div>
 	</div>
+</div>
 </body>
 </html>
