--- a/views/login.html
+++ b/views/login.html
@@ -1,25 +1,32 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+<link rel="stylesheet" href="/css/core.css" type="text/css" charset="utf-8">
 <title>登录</title>
 </head>
 <body>
 <div id="header">
-	<a href="/actions/regist.py">注册</a>
+	<div id="logo">
+		<img width=70px; src="/images/logo.png">
+	</div>
 </div>
-<div id="error">
-	<span style="color: red;">{error_message}</span>
+<div id="content">
+	<div id="error">
+		<span class="error"><strong>{error_message}</strong></span>
+	</div>
+	<div id="form">
+		<form action="/login" method="post" accept-charset="utf-8">
+			<label for="email">邮箱： </label>
+			<input type="text" name="email" value="" id="email" class="field"><br />
+			<label for="password">密码：</label>
+			<input type="password" name="password" value="" id="password" class="field"><br />
+			<input type="submit" value="登录" class="button">
+			<a href="/regist">注册新帐号</a>
+		</form>
+	</div>
 </div>
-<div id="login_form" class="form">
-	<form action="/actions/login.py" method="post" accept-charset="utf-8">
-		<label for="email">邮箱： </label>
-		<input type="text" name="email" value="" id="email"><br />
-		<label for="password">密码：</label>
-		<input type="password" name="password" value="" id="password"><br />
-		<p><input type="submit" value="登录">	<input type="reset" name="reset" value="重置" ></p>
-	</form>
+<div id="footer">
 </div>
 </body>
-
 </html>
 
