--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,19 @@
 <div id="header">
 	<div id="logo">
 		<img width=70px; src="/images/logo.png">
-		<a href="/logout">登出</a>
+		<div id="menu">
+			<ul id="mainmenu">
+				<li class="email">{email}</li>
+				<li class="subnav" >
+				<img src="{image_path}">
+				<ul id="submenu">
+					<li><a href="/changeimg">更改默认头像</a></li>
+					<li><a href="/passwd">更改密码</a></li>
+					<li><a href="/logout">登出</a></li>
+				</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
 <div id="content">
