--- a/views/passwd.html
+++ b/views/passwd.html
@@ -1,13 +1,12 @@
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-<title>更换头像</title>
+<title>更改密码</title>
 <link rel="stylesheet" href="/css/core.css" type="text/css"  charset="utf-8">
 <script src="/js/application.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body >
 <div id="header">
-	<div id="logo">
 	<div id="logo">
 		<img width=70px; src="/images/logo.png">
 		<div id="menu">
@@ -24,18 +23,21 @@
 			</ul>
 		</div>
 	</div>
-	</div>
 </div>
 <div id="content">
 	<div id="error">
 		<span class="error"><strong>{error_message}</strong></span>
 	</div>
 	<div id="form">
-		<h1>从电脑中选择一个图片文件</h1>
-		<form action="/changeimg" method="post" enctype="multipart/form-data">
-			<label for="image">上传文件：</label>
-			<input type="file" name="image" class="field" style="border: none;"><br />
-			<input type="submit" value="提交" class="button">
+		<form action="/passwd" method="post">
+			<label for="current">当前密码：</label>
+			<input type="password" name="current" class="field"><br />
+			<label for="changed">新的密码：</label>
+			<input type="password" name="changed" class="field"><br />
+			<label for="repeat_changed">重复新的密码：</label>
+			<input type="password" name="repeat_changed" class="field"><br />
+
+			<input type="submit" value="修改" class="button">
 			<a href="/index">取消</a>
 		</form>
 	</div>
